# astronode-uart

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: Application_layer.cpp  Application_layer.h  Application_utils.cpp  Application_utils.h  Astronode_command.cpp  Astronode_command.h  CMakeLists.txt  Command.cpp  Command.h  Opcodes_id.h  SerialInterface.h  Serial_fake.h  Serial_interface.h  Serial_port.h  SimpleSerial.h  Transport.cpp  Transport.h  Transport_layer.cpp  Transport_layer.h  Transport_utils.cpp  Transport_utils.h  main.cpp
src/Serial_fake/: Serial_fake.cpp  Serial_fake.h
src/Serial_hardware/: SimpleSerial.h
tests/: Application_layer-test.cpp  Application_utils-test.cpp  Astronode_command-test.cpp  CMakeLists.txt  Command-test.cpp  Serial_fake-test.cpp  Transport-test.cpp  Transport_layer-test.cpp  Transport_utils-test.cpp
